<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#EBA09DA0"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="415dp"
        android:layout_height="444dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="76dp"
            android:layout_height="24dp"
            android:layout_marginStart="28dp"
            android:text="name: "
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/Edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:text="Name"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Edit_id"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="154dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="77dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:text="id:"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <EditText
            android:id="@+id/Edit_id"
            android:layout_width="209dp"
            android:layout_height="26dp"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Edit_phone"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/Edit_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="75dp"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:text="phone"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/Edit_phone"
            android:layout_width="210dp"
            android:layout_height="28dp"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="phone"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Edit_address"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/Edit_id" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="addrees"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/Edit_address"
            android:layout_width="214dp"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/Edit_phone"
            tools:layout_editor_absoluteX="154dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="chekcd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="94dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="16dp"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Edit_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EBA09DA0"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Edit_deleteBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="659dp" />

    <Button
        android:id="@+id/Edit_deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EBA09DA0"
        android:text="@string/delete"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Edit_saveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Edit_cancelBtn"
        tools:layout_editor_absoluteY="659dp" />

    <Button
        android:id="@+id/Edit_saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EBA09DA0"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Edit_deleteBtn"
        tools:layout_editor_absoluteY="659dp" />
</androidx.constraintlayout.widget.ConstraintLayout>