<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#EBA09DA0"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="226dp"
            android:layout_height="53dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_student"
            android:textSize="34sp"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="415dp"
        android:layout_height="444dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7">

        <TextView
            android:id="@+id/Detalis_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="name: "
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Detalis_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/Add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Add_id"
            app:layout_constraintStart_toEndOf="@+id/Detalis_name"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/Detalis_id"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="id:"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Detalis_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Detalis_name" />

        <EditText
            android:id="@+id/Add_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Add_phone"
            app:layout_constraintStart_toEndOf="@+id/Detalis_id"
            app:layout_constraintTop_toBottomOf="@+id/Add_name" />

        <TextView
            android:id="@+id/Detalis_phone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="phone"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Detalis_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Detalis_id" />

        <EditText
            android:id="@+id/Add_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Add_addres"
            app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
            app:layout_constraintTop_toBottomOf="@+id/Add_id" />

        <TextView
            android:id="@+id/Detalis_address"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="addrees"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Detalis_phone" />

        <EditText
            android:id="@+id/Add_addres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
            app:layout_constraintStart_toEndOf="@+id/Detalis_address"
            app:layout_constraintTop_toBottomOf="@+id/Add_phone" />

        <CheckBox
            android:id="@+id/Detalis_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="chekcd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Detalis_address" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="94dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/student" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Add_CancelBtn"
        android:layout_width="183dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#EBA09DA0"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Add_SaveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Add_SaveBtn"
        android:layout_width="184dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#EBA09DA0"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Add_CancelBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>